fix(styles): edit icon aligned to the top
affects: ak-inline-edit

--- a/packages/ak-inline-edit/src/styles.less
+++ b/packages/ak-inline-edit/src/styles.less
@@ -30,6 +30,12 @@
   }
 }
 
+.edit-button-wrapper {
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
 // the vendor prefixes here are deliberate. 'appearance' does not seem to get picked up by postcss,
 // eslint or even Chrome for some reason. :/
 .edit-button {
